# tai

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
.planning/: DESIGN.md  IDEA.md  config.json
.planning/research/: SUMMARY.md  env-detection.md  existing-tools.md  rust-patterns.md
.semver/: config.yaml
.storyhook/: CLAUDE.md  project.toml  states.toml
.storyhook/archive/: archive.db
scripts/: install.sh
src/: action.rs  cli.rs  config.rs  error.rs  exec.rs  history.rs  lib.rs  main.rs  prompt.rs
src/api/: claude_cli.rs  codex_cli.rs  direct.rs  gemini_direct.rs  mod.rs  oauth.rs  openai_direct.rs  response.rs  sse.rs
src/env/: container.rs  git.rs  mod.rs  multiplexer.rs  os.rs  packages.rs  remote.rs  shell.rs  tty.rs
tests/: e2e.rs  live.rs
