[package]
name = "tai"
version = "0.2.1"
edition = "2024"
description = "Fast, context-aware terminal AI assistant"

[lib]
name = "tai"
path = "src/lib.rs"

[[bin]]
name = "tai"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = "3"
owo-colors = "4"
rusqlite = { version = "0.34", features = ["bundled"] }
supports-color = "3"
anyhow = "1"
thiserror = "2"
which = "7"

[dev-dependencies]
tempfile = "3"
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
